# lyricBuilder

./: .gitignore  README.md  pyproject.toml
.claude/skills/lyricbuilder/: SKILL.md
docs/superpowers/plans/: 2026-07-12-aiff-support.md  2026-07-12-lyricbuilder.md
docs/superpowers/specs/: 2026-07-12-aiff-support-design.md  2026-07-12-lyricbuilder-design.md
lyricbuilder/: __init__.py  cache.py  cli.py  config.py  lyricfetch.py  models.py  scanner.py  tagger.py
sources/: __init__.py  base.py  lrclib.py  netease.py  web_scrape.py
tests/: test_cache.py  test_cli.py  test_lyricfetch.py  test_scanner.py  test_smoke.py  test_source_lrclib.py  test_source_netease.py  test_source_web_scrape.py  test_tagger.py
