[project]
name = "lyricbuilder"
version = "0.1.0"
description = "Fetch and attach lyrics for a local music library"
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
lyricbuilder = "lyricbuilder.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "pytest-tmp-files>=0.0.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lyricbuilder*", "sources*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
